// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cloud Object Store Container form component should add Amazon cloud object store container 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class="cds--form-item"
    >
      <div
        class="cds--select"
      >
        <label
          class="cds--label"
          dir="auto"
          for="storage_manager_id"
        >
          <span
            aria-hidden="true"
            class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
          >
            *
          </span>
          Storage Manager
        </label>
        <div
          class="cds--select-input__wrapper"
        >
          <select
            class="cds--select-input"
            id="storage_manager_id"
            name="storage_manager_id"
            title=""
          >
            <option
              class="cds--select-option"
              label="<Choose>"
              value="-1"
            >
              &lt;Choose&gt;
            </option>
            <option
              class="cds--select-option"
              label="OpenStack Swift Manager"
              value="6"
            >
              OpenStack Swift Manager
            </option>
            <option
              class="cds--select-option"
              label="dummy aws S3 Storage Manager"
              value="87"
            >
              dummy aws S3 Storage Manager
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="cds--select__arrow"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
            />
          </svg>
          
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Add
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Cloud Object Store Container form component should add Openstack cloud object store container 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class="cds--form-item"
    >
      <div
        class="cds--select"
      >
        <label
          class="cds--label"
          dir="auto"
          for="storage_manager_id"
        >
          <span
            aria-hidden="true"
            class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
          >
            *
          </span>
          Storage Manager
        </label>
        <div
          class="cds--select-input__wrapper"
        >
          <select
            class="cds--select-input"
            id="storage_manager_id"
            name="storage_manager_id"
            title=""
          >
            <option
              class="cds--select-option"
              label="<Choose>"
              value="-1"
            >
              &lt;Choose&gt;
            </option>
            <option
              class="cds--select-option"
              label="OpenStack Swift Manager"
              value="6"
            >
              OpenStack Swift Manager
            </option>
            <option
              class="cds--select-option"
              label="dummy aws S3 Storage Manager"
              value="87"
            >
              dummy aws S3 Storage Manager
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="cds--select__arrow"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
            />
          </svg>
          
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Add
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Cloud Object Store Container form component should render add cloud object store container form 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class="cds--form-item"
    >
      <div
        class="cds--select"
      >
        <label
          class="cds--label"
          dir="auto"
          for="storage_manager_id"
        >
          <span
            aria-hidden="true"
            class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
          >
            *
          </span>
          Storage Manager
        </label>
        <div
          class="cds--select-input__wrapper"
        >
          <select
            class="cds--select-input"
            id="storage_manager_id"
            loadingmessage="Loading..."
            name="storage_manager_id"
            title=""
          >
            <option
              class="cds--select-option"
              value=""
            >
              &lt;Choose&gt;
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="cds--select__arrow"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
            />
          </svg>
          
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Add
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;
